--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -19,6 +19,7 @@ MODEL:
     # Training
     target_idx:      3           # target column idx (from 0..N-1) in the CSV (e.g., Close Price)
     n_epochs:        20          # Epochs on train+valid after hp tuning and rolling initialization
+    valid_split:     0.3         # meaning 70/30 train/valid split of full training dataset.
     batch_size:      64          # Mini-batch size for AdamW                 
     training_mode: "sequential"  # “sequential”: Stage-1 → Stage-2    /   “hybrid”  : Stage-1 (pretrain_epochs) -> Stage-1 + Stage-2
     pretrain_epochs: 5           # Stage-1 warm-up epochs in hybrid mode
@@ -27,7 +28,7 @@ MODEL:
 
     # Hyperparameter tuning settings
     tune_hparams:    true        # Use Optuna Bayesian search.            
-    n_trials:        1           # Optuna trials for each run. Used only if tune_hparams is true
+    n_trials:        20          # Optuna trials for each run. Used only if tune_hparams is true
 
   # Default hyper-parameters defined by model are overwritten by this Optuna configuration
   HPARAMS:  # optuna_type: "categorical", low-high (assumed float), int_low-high, log_low-high
@@ -154,7 +155,6 @@ STRATEGY:
     # Objectives: sharpe_ratio, sortino_ratio, calmar_ratio, max_drawdown, total_return, annual_return, daily_vol
     tune_hparams: true
     n_trials: 1
-    valid_split : 0.3    # meaning 80/20 train/valid split of full training dataset. NOTE: used also for model split
     objectives:          # use only nautilus_trader portfolio_analyzer statistics
       sharpe_ratio: maximize
       #total_return: maximize
