strategy runs until balance negative (retrain fully implemented)

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -27,8 +27,8 @@ MODEL:
     save_backups: false          # whether to save backups during walk-forward
 
     # Hyperparameter tuning settings
-    tune_hparams:    true        # Use Optuna Bayesian search.            
-    n_trials:        20          # Optuna trials for each run. Used only if tune_hparams is true
+    tune_hparams:    false        # Use Optuna Bayesian search.            
+    n_trials:        1          # Optuna trials for each run. Used only if tune_hparams is true
 
   # Default hyper-parameters defined by model are overwritten by this Optuna configuration
   HPARAMS:  # optuna_type: "categorical", low-high (assumed float), int_low-high, log_low-high
