--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,35 @@
 # ---------------------------------------------------------------------------
 #  MODEL CONFIGURATION
 # ---------------------------------------------------------------------------
+DATA: 
+  # Fixed parameters (not optimized)
+  PARAMS:
+    pca_dir : "logs/models/pca/"  # where to save/load PCA models
+
+    features_to_load: "candles"       # candles = OHLCV
+    adjust: true                      # wheter to adjust OHLC based on stock splits and dividends
+
+    # Data Augmentation settings
+    technical_indicators: false        # add technical indicators as features
+    pca: false                         # apply PCA to reduce feature dimensionality
+
+  HPARAMS:  # optuna_type: "categorical", low-high (assumed float), int_low-high, log_low-high
+
+    pca_var_explained: 
+      default: 0.95
+      optuna:
+        optuna_type: low-high
+        low: 0.90
+        high: 0.99
+
+    tis_timeperiod:
+      default: 14
+      optuna:
+        optuna_type: int_low-high
+        low: 10
+        high: 30
+        
+
 MODEL:
   # Fixed parameters (not optimized)
   PARAMS:
@@ -13,12 +42,11 @@ MODEL:
     pred_len:   1                     # H : prediction horizon (next bar)         (one-step forecast)
     dynamic_universe_mult: 0.2        # Capacity multiplier when extenting universe: 1+univers_mult (in this case +20%)       
     feature_dim: 5                    # OHLCV + extra features for L1 market data. To be changed if higher level data is avail
-    features_to_load: "candles"       # candles = OHLCV
-    adjust: true                      # wheter to adjust OHLC based on stock splits and dividends
+
 
     # Training
     target_idx:      3           # target column idx (from 0..N-1) in the CSV (e.g., Close Price)
-    n_epochs:        20          # Epochs on train+valid after hp tuning and rolling initialization
+    n_epochs:        2         # Epochs on train+valid after hp tuning and rolling initialization
     batch_size:      64          # Mini-batch size for AdamW                 
     training_mode: "sequential"  # “sequential”: Stage-1 → Stage-2    /   “hybrid”  : Stage-1 (pretrain_epochs) -> Stage-1 + Stage-2
     pretrain_epochs: 5           # Stage-1 warm-up epochs in hybrid mode
