--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -156,7 +156,7 @@ STRATEGY:
     # Objectives: sharpe_ratio, sortino_ratio, calmar_ratio, max_drawdown, total_return, annual_return, daily_vol
     tune_hparams: true
     n_trials: 1 
-    primary_objective:  "total_pnl_pct"       # used to determine the overall single best hp tuning trial in multi-objective optimization       
+    primary_objective:  "total_pnl_pct"     # used to determine the overall single best hp tuning trial in multi-objective optimization       
     objectives:                             # use only nautilus_trader portfolio_analyzer statistics
       ## Performance / Returns ##
       #returns_volatility: minimize      
@@ -215,7 +215,7 @@ STRATEGY:
 
     # Order execution algorithm
     execution:
-      timing_force: "DAY"      # Specifies how long the order will remain open or active before any remaining quantity is canceled.
+      timing_force: "GTC"      # Specifies how long the order will remain open or active before any remaining quantity is canceled.
       #exec_algo: twap         # Specifies to use TWAP execution algorithm, Default: whole
       twap:                    # Split parent order into 4 TWAP child orders, each after 2.5 seconds 
         slices: 1              # 4 separate orders
