integration of FeatureBar

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -54,7 +54,7 @@ MODEL:
     save_backups: false          # whether to save backups during walk-forward
 
     # Hyperparameter tuning settings
-    tune_hparams:    false        # Use Optuna Bayesian search.            
+    tune_hparams:    true        # Use Optuna Bayesian search.            
     n_trials:        1          # Optuna trials for each run. Used only if tune_hparams is true
 
   # Default hyper-parameters defined by model are overwritten by this Optuna configuration
